--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,26 @@
+
 @import "bootstrap";
+
+.navbar-inverse {
+    background-image: none;
+    background-color: #FF0066;
+    border-color: #E7E7E7;
+}
+
+.navbar-fixed-top {
+   top: 10px;
+    background-image: none;
+   background-color: #FF0066;
+   height: 60px;
+}
+
+.navbar {
+  .navbar-inner {
+    background-image: none;
+    background-color: #2c2c2c;
+    height: 40px;
+  }
+}
 
 html {
   overflow-y: scroll;
@@ -52,7 +74,8 @@ p {
 
 li {
   font-size: 1.0em;
-  line-height: 1.7em;
+  line-height: 1.4em;
+  color: white
 }
 
 /* header */
