--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -3,6 +3,7 @@
 	<p>
 	<h3>Lesson <%= lesson.id %>&nbsp<%= lesson.name %>
     <%= link_to 'Edit', edit_lesson_path(lesson) %></h3>
+	<%= button_to "Delete ", { action: "destroy", id: lesson.id }, method: :delete, data: { confirm: "Are you sure?" } %>
 	There are <%= lesson.quizzes.count %> quizzes for this lesson
 	<%= link_to 'Show', lesson_quizs_path(lesson) %>
 	 <%= link_to 'Add a quiz', new_lesson_quiz_path(lesson) %>
@@ -10,3 +11,4 @@
 	<p>
   <% end %>
   </p>
+  <p><%= link_to 'New Lesson', new_lesson_path %></p>
