--- a/app/views/matchquestions/new.html.erb
+++ b/app/views/matchquestions/new.html.erb
@@ -3,6 +3,11 @@
     <%= label_tag :name %><br>
     <%= text_field_tag :name %>
   </p>
+  <p>
+    <%= label_tag :question %><br>
+    <%= text_area_tag :question %>
+  </p>
+
   <div>
   <table>
     <th><%= label_tag :match %></th>
@@ -23,4 +28,4 @@
     <%= submit_tag "Submit" %>
   </p>
 <% end %>
-<%= link_to 'Back to Lessons List', matchquestions_path %>
+<%= link_to 'Back to Questions List', matchquestions_path %>
