--- a/app/views/quizquestions/take.html.erb
+++ b/app/views/quizquestions/take.html.erb
@@ -1,4 +1,4 @@
-<h3> Take_quiz </h3>
+z </h3>
 <p> 
 for admin only <%= @source_question.class.to_s %>
 </p>
@@ -37,16 +37,17 @@ for admin only <%= @source_question.class.to_s %>
   match id: <%= @quizquestion.origin_id %>
   </p>
   <table>
-  <% @source_question.matches.each_with_index do |match,index| %>
+  <table>
+  <% @source_question.matches.each_with_index do |my_match,index| %>
   <tr>
   <td>
-  <%= match.left %>
+  <%= my_match.match %>
   </td>
   <td>
    &nbsp; &nbsp; &nbsp; &nbsp;    
   </td>
   <td>
-  <%= collection_select :matches, "answer"+index.to_s, Match.where("matchquestion_id = ?", @quizquestion.origin_id ).shuffle, :right, :right %>
+  <%= collection_select :matches, "answer"+index.to_s, Match.where("matchquestion_id = ?", @quizquestion.origin_id ).shuffle, :answer, :answer %>
   </td>
   </tr>
   <% end %>
