--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,10 @@
     <%= f.label :username %><br>
     <%= f.text_field :name %>
   </p>
- 
+  <p>
+    <%= f.label :password %><br>
+    <%= f.text_field :password %>
+  </p> 
 
 	<p>
     <%= f.label :lesson%><br>
